--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 html {
     box-sizing: border-box;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 62.5%;
 }
 
@@ -9,12 +10,20 @@ html {
     box-sizing: inherit;
 }
 
-p, h1 {
+h1, h3, p {
     color: black;
 }
 
 h1 {
     font-size: 3.6rem;
+}
+
+h3 {
+    font-size: 2.9rem;
+}
+
+p {
+    font-size: 1.6rem;
 }
 
 #container {
